packages/webapp/src/components/Animals/FixedHeaderContainer/styles.module.scss
/*
*  Copyright 2024 LiteFarm.org
*  This file is part of LiteFarm.
*
*  LiteFarm is free software: you can redistribute it and/or modify
*  it under the terms of the GNU General Public License as published by
*  the Free Software Foundation, either version 3 of the License, or
*  (at your option) any later version.
*
*  LiteFarm is distributed in the hope that it will be useful,
*  but WITHOUT ANY WARRANTY; without even the implied warranty of
*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
*  GNU General Public License for more details, see <https://www.gnu.org/licenses/>.
*/

@import '../../../assets/mixin.scss';

.wrapper {
  height: calc(100vh - var(--global-navbar-height));
  max-width: 100vw;
  display: flex;
  flex-direction: column;
}

.paper {
  width: 100%;
  overflow-y: auto;
  border: none;
  border-radius: 0;
  box-shadow: none;
  flex: 1;

  &.hasMaxWidth {
    max-width: 1024px;
  }

  @include lg-breakpoint {
    margin: 16px auto;
    border-radius: 8px;
    border: 1px solid var(--Colors-Primary-Primary-teal-50);
  }
}

.overflowStyle {
  display: flex;
  justify-content: center;
  overflow-y: scroll;
}

.childrenWrapper {
  width: 100%;

  &.hasMaxWidth {
    max-width: 1024px;
  }
}

